@@ -1,3 +1,8 @@
+2023-03-28  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-squash-empty-lines): New function.
+	(ebuild-repo-mode-before-save): Call it.
+
 2023-03-26  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.63 released.
